--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sustainable Food Finder</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Header -->
+    <header>
+      <h1>HER-Market</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#"> Products</a></li>
+          <li><a href="#"> Resources</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Footer -->
+
+    <footer>
+      <h2>Created for Black Wings Hacks 2023</h2>
+      <div class="names">
+        <p>Afeya Jahin</p>
+        <p>Angel T. Ebebi</p>
+        <p>Cynthia Akanaga</p>
+        <p>Sulagna Saha </p>
+      </div>
+    </footer>
+
+
+
   </body>
 </html>
