--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="src\index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sustainable Food Finder</title>
   </head>
@@ -15,8 +15,8 @@
       <h1>HER-Market</h1>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#1">Home</a></li>
+          <li><a href="#2">About</a></li>
           <li><a href="#"> Products</a></li>
           <li><a href="#"> Resources</a></li>
         </ul>
